[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "redsky"
version = "1.1.0"
readme = "README.md"
authors = [
    { name = "MercyClassic" },
]
license = { text = "Apache-2.0" }
description = "Micro Web Framework"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    'exceptiongroup>=1.1.3; python_version<"3.11"',
]

[project.urls]
"Source" = "https://github.com/MercyClassic/redsky"
